Fix flickery vertical timeline on some mobile browsers

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,7 @@ html.dark {
 .borderBlack {
     @apply border border-black/10;
 }
+
+html, body {
+    overflow-x:hidden 
+  } 
